--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.142.0",
     "@tanstack/store": "^0.8.0",
+    "@tanstack/zod-form-adapter": "^0.42.1",
     "better-auth": "^1.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
