made lots of changes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-# These will be automatically created by Neon Launchpad (https://neon.new).
-# You will also need to 
-VITE_DATABASE_URL=
 VITE_DATABASE_URL_POOLER=
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+GEMINI_API_KEY=
+QDRANT_API_KEY=
+QDRANT_API_URL=
