--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
+    "@tanstack/react-store": "^0.8.0",
     "@tanstack/router-plugin": "^1.142.0",
     "@tanstack/start": "^1.120.20",
     "@tanstack/store": "^0.8.0",
@@ -47,7 +48,6 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.26",
     "nitro": "latest",
-    "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.6.0",
@@ -63,7 +63,6 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
-    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
